// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge #renderBadge() should ignore position if no content provided 1`] = `
<div
  className="ui-badge-badge"
>
  Badge title
</div>
`;

exports[`Badge #renderBadge() should render arrow-left 1`] = `
<div
  className="ui-badge"
>
  Badge Content
  <div
    className="ui-badge-badge ui-badge-badge_arrow-left ui-badge-badge_right"
  >
    Badge title
    <span
      className="ui-badge-badge-arrow"
    />
  </div>
</div>
`;

exports[`Badge #renderBadge() should render arrow-right 1`] = `
<div
  className="ui-badge-badge ui-badge-badge_arrow-right"
>
  Badge title
  <span
    className="ui-badge-badge-arrow"
  />
</div>
`;
